[package]
name = "routeros-steamcm-iplist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.22", features = ["rustls-tls-manual-roots", "json"], default-features = false }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
futures = "0.3.29"
